# Signet-Wallet-Project

./: README.md
solution/python/: balance.py
solution/rust/balance/: Cargo.toml
solution/rust/balance/src/: lib.rs  main.rs
solution/rust/spend/: Cargo.toml
solution/rust/spend/src/: lib.rs  main.rs
