[package]
name = "balance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Add you custom dependencies below


num-bigint = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.27.0", features = ["rand"] }
hmac = "0.12"
ripemd = "0.1"
hex = "0.4"
serde_json = "1.0"