[package]
name = "spend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
balance = {path = "../balance"}
bech32 = "0.8"
hex = "0.4.3"
serde_json = "1.0"
secp256k1 = "0.27.0"
ripemd = "0.1.3"
hmac = "0.12.1"
sha2 = "0.10"
num-bigint = "0.4"